--- a/CatsMakeMeLaugh/Assets/SaveSettings.json
+++ b/CatsMakeMeLaugh/Assets/SaveSettings.json
@@ -1,1 +1,1 @@
-{"launchInDesktopMode":false,"taskbarHeight":0,"masterVolume":0.0,"meowVolume":-5.402039527893066,"attentionSeekVolume":-42.90325927734375}
+{"launchInDesktopMode":false,"taskbarHeight":0,"masterVolume":0.0,"meowVolume":0.0,"attentionSeekVolume":0.0}
