--- a/CatsMakeMeLaugh/Assets/SaveSettings.json
+++ b/CatsMakeMeLaugh/Assets/SaveSettings.json
@@ -1,1 +1,7 @@
-{"launchInDesktopMode":false,"taskbarHeight":0,"masterVolume":0.0,"meowVolume":0.0,"attentionSeekVolume":0.0}
+{
+    "launchInDesktopMode": false,
+    "taskbarHeight": 0,
+    "masterVolume": 0.0,
+    "meowVolume": 0.0,
+    "attentionSeekVolume": 0.0
+}
